--- a/ModBuilder/ModBuilder.csproj
+++ b/ModBuilder/ModBuilder.csproj
@@ -53,7 +53,7 @@
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
-    <Compile Include="XMLSerializer.cs" />
+    <Compile Include="BodypartsViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -92,6 +92,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Unity\CollectorsEdition\CollectorsEdition.csproj">
+      <Project>{7b378b89-e1a2-d1e7-da91-62e73e561d15}</Project>
+      <Name>CollectorsEdition</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
